bat and async